--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "v0xfe-desktop-apps",
-  "version": "1.0.4",
-  "productName": "Vezham Messages",
-  "description": "Vezham Messages for connecting People",
-  "keywords": [],
+  "version": "1.0.1",
+  "productName": "",
   "author": {
     "name": "vigneshwaran-vtpl",
     "email": "vigneshwaran@vezham.com"
@@ -11,12 +9,9 @@
   "license": "MIT",
   "main": ".vite/build/main.js",
   "scripts": {
-    "build": "pnpm package && pnpm make && pnpm publish",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "make-arch": "electron-forge make --arch='arm64,universal'",
-    "make-arch:1": "electron-forge make --arch='ia32,x64,armv7l,arm64,universal'",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
@@ -25,7 +20,6 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.6.0",
-    "@electron-forge/core": "^7.6.0",
     "@electron-forge/maker-deb": "^7.6.0",
     "@electron-forge/maker-rpm": "^7.6.0",
     "@electron-forge/maker-squirrel": "^7.6.0",
