--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v0xfe-desktop-apps",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "productName": "",
   "author": {
     "name": "vigneshwaran-vtpl",
@@ -32,6 +32,7 @@
     "@types/electron-squirrel-startup": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "dotenv": "^16.4.7",
     "electron": "33.3.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
