feat: updated app menu

--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@ V_CONFIG_APP={"name":"Vezham Messenger","category":"public.app-category.social-n
 V_CONFIG_AUTHOR={"copyright":"✌️ Vezham © 2025","info":{"v0xauthor":"v0xfe-desktop-apps"}}
 V_CONFIG_ICON={"host":"https://static.cdn.vezham.com","path":"/apps/messenger/icons"}
 V_APP_URL={"__type":"prod","local":"http://localhost:3000","preview":"http://localhost:8080","prod":"https://lab5-ic-web-vezham--policy-center-timeline-61b5bb1-vgfywiin.web.app"}
+V_APP_MENU={"help_center":"https://help.vezham.com/apps/messenger"}
 # V_APP_URL={"__type":"prod","prod":"https://messenger.apps.cloud.vezham.com"}
