--- a/src/v.config.json
+++ b/src/v.config.json
@@ -1,1 +1,1 @@
-{"V_APP_URL":"https://lab5-ic-web-vezham--policy-center-timeline-61b5bb1-vgfywiin.web.app"}
+{"V_APP_URL":"https://lab5-ic-web-vezham--policy-center-timeline-61b5bb1-vgfywiin.web.app","V_HELP_CENTER":"https://help.vezham.com/apps/messenger"}
