--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # PORT=5556
 # PRE_PORT=8080
-# V_IS_DEBUG=true
+V_IS_DEBUG=true
 # V_APP_NAME=v0xfe-desktop-apps
 V_CONFIG_APP={"name":"Vezham Messenger","category":"public.app-category.social-networking","app_version":"1.0.5","build_version":"v0x25","pkg_bundle_id":"com.vezham","app_bundle_id":"apps.messenger","env":"prod","status":"stable"}
 V_CONFIG_AUTHOR={"copyright":"✌️ Vezham © 2025","info":{"v0xauthor":"v0xfe-desktop-apps"}}
