chore: added repo config-starter-kit

--- a/src/v.config.json
+++ b/src/v.config.json
@@ -1,1 +1,5 @@
-{"V_IS_DEBUG":true,"V_APP_URL":"https://lab5-ic-web-vezham--policy-center-timeline-61b5bb1-vgfywiin.web.app","V_HELP_CENTER":"https://help.vezham.com/apps/messenger"}
+{
+  "V_IS_DEBUG": true,
+  "V_APP_URL": "https://lab5-ic-web-vezham--policy-center-timeline-61b5bb1-vgfywiin.web.app",
+  "V_HELP_CENTER": "https://help.vezham.com/apps/messenger"
+}
