--- a/package.json
+++ b/package.json
@@ -1,28 +1,46 @@
 {
-  "name": "v0xfe-desktop-apps",
+  "name": "v0xfe-apps-desktop",
   "version": "1.0.3",
-  "productName": "",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/vezham/v0xFE-desktop-apps"
+    "url": "https://github.com/vezham/v0xFE-apps-desktop"
   },
   "author": {
-    "name": "v0xFE-desktop-apps",
+    "name": "v0xFE-apps-desktop",
     "email": "frontend-developers@vezham.com"
   },
   "main": ".vite/build/main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
+    "clean": "pnpm clean:build && pnpm clean:dist && pnpm clean:node_modules && pnpm clean:lock",
+    "clean:build": "rimraf ./build",
+    "clean:dist": "rimraf ./**/**/__mocks__/dist && rimraf ./dist",
+    "clean:lock": "rm ./pnpm-lock.yaml",
+    "clean:node_modules": "rimraf ./**/**/__mocks__/node_modules && rimraf ./node_modules",
+    "fix": "pnpm fix:lint:eslint && pnpm fix:lint:stylelint",
+    "fix:lint:eslint": "eslint --cache --cache-strategy metadata --fix",
+    "fix:lint:stylelint": "stylelint \"**/*.{css,less,module.less}\" --allow-empty-input --cache --cache-strategy metadata --fix",
+    "format": "bash v/bin/cli-format.sh",
+    "format:check": "prettier . --check --cache && pnpm format:pkg-check",
+    "format:lint:eslint": "eslint --cache --cache-strategy metadata",
+    "format:lint:eslint-hard": "eslint",
+    "format:lint:stylelint": "stylelint \"**/*.{css,less,module.less}\" --allow-empty-input --cache --cache-strategy metadata",
+    "format:pkg": "sort-package-json \"package.json\" --quiet",
+    "format:pkg-check": "sort-package-json \"package.json\" --check",
+    "format:prettier": "prettier . --write --log-level silent --cache --cache-strategy metadata",
+    "format:prettier-hard": "prettier . --write",
+    "postinstall": "husky install && pnpm format",
     "make": "electron-forge make",
+    "package": "electron-forge package",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "start": "electron-forge start"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
     "@electron-forge/cli": "^7.6.0",
     "@electron-forge/maker-deb": "^7.6.0",
     "@electron-forge/maker-rpm": "^7.6.0",
@@ -33,15 +51,34 @@
     "@electron-forge/plugin-vite": "^7.6.0",
     "@electron-forge/shared-types": "^7.6.0",
     "@electron/fuses": "^1.8.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "commitlint-plugin-function-rules": "^2.0.2",
     "dotenv": "^16.4.7",
     "electron": "33.3.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "sort-package-json": "2.13.0",
+    "stylelint": "^15.11.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-less": "^3.0.1",
+    "stylelint-prettier": "^4.0.2",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4",
     "vite": "^5.0.12"
-  }
+  },
+  "packageManager": "pnpm@9.6.0",
+  "engines": {
+    "node": ">=20.x",
+    "pnpm": ">=9.x"
+  },
+  "productName": ""
 }
