--- a/.github/workflows/apps-desktop-test.yml
+++ b/.github/workflows/apps-desktop-test.yml
@@ -26,6 +26,15 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo $GITHUB_ACTION_PATH
+
+      - name: Install | CI/TESTING
+      shell: bash
+      run: ./.github/scripts/install.sh
+      
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
