--- a/.github/workflows/apps-desktop-test.yml
+++ b/.github/workflows/apps-desktop-test.yml
@@ -14,7 +14,7 @@ env:
   REPO: ${{ inputs.GIT_REPO || 'vezham/v0xFE-apps-desktop' }}
   BRANCH: ${{ inputs.GIT_BRANCH || 'timeline' }}
   CI_DIR: ./v/bin/ci
-  # ENTRY_POINT: ./
+  ENTRY_POINT: ./
   # DX_APP_PATH:
   # DX_APP_NAME:
   # NX_APP_NAME:
@@ -27,9 +27,9 @@ jobs:
         pnpm-version: [9.6.0]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
-    # defaults:
-    #   run:
-    #     working-directory: ${{ env.ENTRY_POINT }}
+    defaults:
+      run:
+        working-directory: ${{ env.ENTRY_POINT }}
     steps:
       - name: checkout | ${{ env.REPO }}@${{ env.BRANCH }}
         uses: actions/checkout@v4
