--- a/.github/workflows/apps-desktop-test.yml
+++ b/.github/workflows/apps-desktop-test.yml
@@ -1,4 +1,4 @@
-# wjdlz/NOTE: ci@1.0.4-trigger-'CI-desc'
+# wjdlz/NOTE: ci@1.0.4-trigger
 name: apps-desktop-test | wf
 
 on:
@@ -14,7 +14,7 @@ env:
   REPO: ${{ inputs.GIT_REPO || 'vezham/v0xFE-apps-desktop' }}
   BRANCH: ${{ inputs.GIT_BRANCH || 'timeline' }}
   CI_DIR: ./v/bin/ci
-  ENTRY_POINT: ./
+  # ENTRY_POINT: ./
   # DX_APP_PATH:
   # DX_APP_NAME:
   # NX_APP_NAME:
@@ -27,9 +27,9 @@ jobs:
         pnpm-version: [9.6.0]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
-    defaults:
-      run:
-        working-directory: ${{ env.ENTRY_POINT }}
+    # defaults:
+    #   run:
+    #     working-directory: ${{ env.ENTRY_POINT }}
     steps:
       - name: checkout | ${{ env.REPO }}@${{ env.BRANCH }}
         uses: actions/checkout@v4
@@ -50,12 +50,6 @@ jobs:
         run: |
           echo 'SHA=${{ steps.short-sha.outputs.sha }}' >> $GITHUB_ENV
 
-      - name: logs | post dir
-        run: pwd
-
-      - name: logs | ls
-        run: ls
-
       # - name: ci-setup | gen DX_APP_URL
 
       # - name: setup | pnpm
@@ -70,31 +64,39 @@ jobs:
       #     cache: 'pnpm'
       #     cache-dependency-path: '**/pnpm-lock.yaml'
 
-      - name: ci-setup | NODE Install
-        shell: bash
-        run: |
-          # wjdlz/NOTE: extract & mask credentials
-          git update-index --chmod=+x ${{ env.CI_DIR }}/scripts/install.sh
+      - uses: ./.github/actions/setup-node
+      # - name: ci-setup | NODE Install
+      #   shell: bash
+      #   run: |
+      #     # wjdlz/NOTE: extract & mask credentials
+      #     git update-index --chmod=+x ${{ env.CI_DIR }}/scripts/install.sh
 
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      # - name: ci-setup | NODE Install
+      #   shell: bash
+      #   run: |
+      #     # wjdlz/NOTE: extract & mask credentials
+      #     git update-index --chmod=+x ${{ env.CI_DIR }}/scripts/install.sh
 
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+      # - name: Setup pnpm cache
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ${{ env.STORE_PATH }}
+      #     key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pnpm-store-
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+      # - name: Install dependencies
+      #   run: pnpm install --frozen-lockfile
 
       - name: Make Electron app
-        run: pnpm run make
+        run: pnpm make
 
+      - name: logs | post dir
+        run: pwd
+
+      - name: logs | ls
+        run: ls
+      
       - name: Zip artifacts
         shell: bash
         run: |
