--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -10,11 +10,15 @@ runs:
         node-version: '20'
         cache: 'pnpm'
 
+    - name: Install PNPM
+      run: npm i -g pnpm
+
+    - run: npm i -g pnpm
     - name: Setup pnpm
       uses: pnpm/action-setup@v3
       with:
         version: latest
-        run_install: false
+        # run_install: false
 
     - name: Install dependencies
       shell: bash
