--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -14,6 +14,10 @@ runs:
       shell: bash
       run: npm i -g pnpm
 
+    - name: Verify PNPM installation
+      shell: bash
+      run: pnpm --version
+      
     - name: Setup pnpm
       uses: pnpm/action-setup@v3
       with:
