--- a/.github/actions/setup-install/action.yml
+++ b/.github/actions/setup-install/action.yml
@@ -10,8 +10,8 @@ runs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version-file: ".nvmrc"
-        registry-url: "https://registry.npmjs.org"
+        # node-version-file: ".nvmrc"
+        # registry-url: "https://registry.npmjs.org"
         cache: "pnpm"
 
     # - name: Setup Git User
