--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -55,31 +55,33 @@ jobs:
         # run: pnpm test
         run: pnpm --version
 
-  # eslint:
-  #   name: ESLint
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout branch
-  #       uses: actions/checkout@v4
+  eslint:
+    name: ESLint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v4
 
-  #     - name: Install
-  #       uses: ./.github/common-actions/install
+      - name: Install
+        uses: ./.github/common-actions/install/action.yml
 
-  #     - name: Run ESLint
-  #       run: pnpm lint
+      - name: Run ESLint
+        # run: pnpm lint
+        run: pnpm --version
 
-  # types:
-  #   name: TypeScript
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout branch
-  #       uses: actions/checkout@v4
+  types:
+    name: TypeScript
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v4
 
-  #     - name: Install
-  #       uses: ./.github/common-actions/install
+      - name: Install
+        uses: ./.github/common-actions/install
 
-  #     - name: Run typecheck
-  #       run: pnpm typecheck
+      - name: Run typecheck
+        # run: pnpm typecheck
+        run: pnpm --version
 
   prettier:
     name: Prettier
