--- a/.github/common-actions/install/action.yml
+++ b/.github/common-actions/install/action.yml
@@ -1,5 +1,5 @@
-name: "Install"
-description: "Sets up Node.js and runs install"
+name: 'Install'
+description: 'Sets up Node.js and runs install'
 
 runs:
   using: composite
@@ -12,7 +12,7 @@ runs:
       with:
         # node-version-file: ".nvmrc"
         # registry-url: "https://registry.npmjs.org"
-        cache: "pnpm"
+        cache: 'pnpm'
 
     # - name: Setup Git User
     #   shell: bash
