ci: permissions testing

--- a/.github/workflows/apps-desktop.yml
+++ b/.github/workflows/apps-desktop.yml
@@ -41,8 +41,8 @@ jobs:
     #   run:
     #     working-directory: ${{ env.ENTRY_POINT }}
     permissions:
-      # contents: write
-      contents: read
+      contents: write
+      # contents: read
       # actions: read
       # checks: write
 
