--- a/.github/workflows/apps-desktop.yml
+++ b/.github/workflows/apps-desktop.yml
@@ -21,6 +21,7 @@ env:
 
 jobs:
   build_and_deploy:
+    name: build & deploy
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -37,13 +38,8 @@ jobs:
             artifact_name: windows-artifacts
             artifact_glob: 'make/**/*.exe'
     runs-on: ${{ matrix.os }}
-    # defaults:
-    #   run:
-    #     working-directory: ${{ env.ENTRY_POINT }}
     permissions:
       contents: write
-      # actions: read
-      # checks: write
 
     steps:
       - name: checkout | ${{ env.REPO }}@${{ env.BRANCH }}
@@ -55,21 +51,13 @@ jobs:
       - name: setup | node & pnpm
         uses: ./.github/actions/setup-install
 
-      - name: setup | pnpm version check
-        run: pnpm --version
-
       # POC --- EOT......
-
-      # - name: ci-setup | SHA
-      #   uses: ./.github/actions/setup-sha
 
       - name: ci-setup | gen DX_APP_URL
         uses: ./.github/actions/gen-dx-app-url
 
       - name: deployer | create commit comment
         uses: ./.github/actions/add-commit-comment
-
-      # EOT......
 
       # - uses: ./.github/actions/setup-certificates
       #   with:
