--- a/.github/workflows/tva.yml
+++ b/.github/workflows/tva.yml
@@ -32,6 +32,10 @@ jobs:
     # defaults:
     #   run:
     #     working-directory: ${{ env.ENTRY_POINT }}
+    permissions:
+      contents: write
+      # actions: read
+      # checks: write
 
     steps:
       - name: checkout | ${{ env.REPO }}@${{ env.BRANCH }}
@@ -42,9 +46,6 @@ jobs:
 
       - name: setup | node & pnpm
         uses: ./.github/actions/setup-install
-
-      - name: setup | pnpm version check
-        run: pnpm --version
 
   format:
     name: Format (pkg,prettier) & Lint (eslint,stylelint)
