ci: testing cross wf

--- a/.github/workflows/tva.yml
+++ b/.github/workflows/tva.yml
@@ -45,7 +45,8 @@ jobs:
           ref: ${{ env.BRANCH }}
 
       - name: setup | node & pnpm
-        uses: ./.github/actions/setup-install
+        # uses: ./.github/actions/setup-install
+        uses: vezham/v0xFE-deployer/.github/actions/setup-install@timeline
 
   format:
     name: Format (pkg,prettier) & Lint (eslint,stylelint)
