--- a/.github/workflows/apps-desktop.yml
+++ b/.github/workflows/apps-desktop.yml
@@ -3,133 +3,19 @@ name: apps-desktop | wf
 
 on:
   push:
-    branches: [timeline]
+    branches: [timeline, deploy/dev, deploy/qa, deploy/preview, deploy/prod]
     paths:
       - '.github/workflows/apps-desktop.yml'
       - 'v/handbooks/ci.md'
-    # tags:
-    #   - 'v*'
-
-env:
-  REPO: ${{ inputs.GIT_REPO || 'vezham/v0xFE-apps-desktop' }}
-  BRANCH: ${{ inputs.GIT_BRANCH || 'timeline' }}
-  CI_DIR: ./v/bin/ci
-  # ENTRY_POINT: ./
-  # DX_APP_PATH:
-  # DX_APP_NAME:
-  # NX_APP_NAME:
+    tags:
+      - 'ci@deployer*'
 
 jobs:
-  build_and_deploy:
-    name: build & deploy
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [20]
-        pnpm-version: [9.6.0]
-        include:
-          - os: ubuntu-latest
-            artifact_name: linux-artifacts
-            artifact_glob: 'make/**/*.{deb,rpm,AppImage}'
-          - os: macos-latest
-            artifact_name: macos-artifacts
-            artifact_glob: 'make/**/*.dmg'
-          - os: windows-latest
-            artifact_name: windows-artifacts
-            artifact_glob: 'make/**/*.exe'
-    runs-on: ${{ matrix.os }}
+  deployer:
+    name: apps-desktop | ${{github.ref_name}}
+    uses: vezham/v0xFE-deployer/.github/workflows/apps-desktop.yml@timeline
+    secrets: inherit
     permissions:
       contents: write
-
-    steps:
-      - name: checkout | ${{ env.REPO }}@${{ env.BRANCH }}
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ env.REPO }}
-          ref: ${{ env.BRANCH }}
-
-      - name: action | node & pnpm
-        uses: vezham/v0xFE-deployer/.github/actions/setup-install@timeline
-
-      # POC --- EOT......
-
-      - name: action | gen DX_APP_URL
-        uses: vezham/v0xFE-deployer/.github/actions/gen-dx-app-url@timeline
-
-      - name: action | create commit comment
-        uses: vezham/v0xFE-deployer/.github/actions/add-commit-comment@timeline
-
-      # - name: cli | build
-      #   run: |
-      #     pnpm run make
-
-      # - uses: ./.github/actions/setup-certificates
-      #   with:
-      #     platform: ${{ runner.os }}
-      #   env:
-      #     APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
-      #     APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-      #     APPLE_ID: ${{ secrets.APPLE_ID }}
-      #     APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
-      #     APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-      #     WINDOWS_PFX: ${{ secrets.WINDOWS_PFX }}
-      #     WINDOWS_PFX_PASSWORD: ${{ secrets.WINDOWS_PFX_PASSWORD }}
-
-      # - name: Setup ImageMagick
-      #   if: runner.os == 'Windows'
-      #   uses: mfinelli/setup-imagemagick@v3
-
-      # - uses: ./.github/actions/setup-icons
-      #   env:
-      #     APP_ICON_PATH: ${{ secrets.APP_ICON_PATH }}
-
-      # - name: Build and publish
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     APPLE_ID: ${{ secrets.APPLE_ID }}
-      #     APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
-      #     APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-      #     WINDOWS_PFX_PASSWORD: ${{ secrets.WINDOWS_PFX_PASSWORD }}
-      #   run: |
-      #     pnpm run make
-      #     pnpm run publish
-
-      # - name: Create artifact archive
-      #   shell: bash
-      #   run: |
-      #     cd out
-      #     if [ "${{ runner.os }}" == "Windows" ]; then
-      #       7z a ../${{ matrix.artifact_name }}.zip ${{ matrix.artifact_glob }}
-      #     else
-      #       zip -r ../${{ matrix.artifact_name }}.zip ${{ matrix.artifact_glob }}
-      #     fi
-
-      # - name: Upload artifacts
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: ${{ matrix.artifact_name }}
-      #     path: ${{ matrix.artifact_name }}.zip
-      #     if-no-files-found: error
-
-      # - name: Create Release
-      #   if: runner.os == 'Linux'
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: |
-      #     # Download artifacts from other platforms
-      #     mkdir -p artifacts
-      #     gh run download --dir artifacts --pattern '*.zip'
-
-      #     # Create release with all artifacts
-      #     assets=()
-      #     for zip in artifacts/*.zip *.zip; do
-      #       if [ -f "$zip" ]; then
-      #         assets+=("$zip")
-      #       fi
-      #     done
-
-      #     gh release create "${{ github.ref_name }}" \
-      #       --title "Release ${{ github.ref_name }}" \
-      #       --draft=false \
-      #       --prerelease=false \
-      #       "${assets[@]}"
+    with:
+      CALLER: ${{github.ref_name}}
